# django-redis-ex

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml  requirements.txt
django_redis_ex/: async_cache.py  cache.py
